# creatures

./: .gitignore  CMakeLists.txt  cool_seeds.txt  main.cpp  readme.md  tmp.txt
mongodriver/lib/: libbsoncxx._noabi.dylib  libmongocxx.3.6.2.dylib
mongodriver/lib/pkgconfig/: libbsoncxx.pc  libmongocxx.pc
src/: Entity.cpp  Entity.h  Point.cpp  Point.h  UiEntity.cpp  UiEntity.h  Utils.h  World.h
src/farm/: Action.cpp  Action.h  Chunk.cpp  Chunk.h  Creature.cpp  Creature.h  CreatureNursery.cpp  CreatureNursery.h  Entity.cpp  Entity.h  Farm.cpp  Farm.h  FarmControl.cpp  FarmControl.h  Food.cpp  LifesRunner.cpp  LifesRunner.h  Map.cpp  Map.h  MapGeneratorControl.cpp  MapGeneratorControl.h  PerformanceAnalyser.cpp  PerformanceAnalyser.h  Tile.cpp  Tile.h  Universe.cpp  Universe.h
src/farm/brain/: ActionDTO.cpp  ActionDTO.h  Brain.cpp  Brain.h  BrainConnector.cpp  BrainConnector.h  CreatureNursery.cpp  CreatureNursery.h  Link.cpp  Link.h
src/farm/entities/: Creature.cpp  Creature.h  Entity.cpp  Entity.h  Food.cpp  Food.h
src/farm/evolutions/: Evolution.cpp  Evolution.h  EvolutionLibrary.cpp  EvolutionLibrary.h
src/farm/life/: Body.cpp  Body.h  EnergyCenter.cpp  EnergyCenter.h  EnergyManagement.cpp  EnergyManagement.h  Life.cpp  Life.h
src/farm/statistics/: BiomassDataTracker.cpp  BiomassDataTracker.h  DataAnalyser.cpp  DataAnalyser.h  DataItem.cpp  DataItem.h  GeneGraphAnalyser.cpp  GeneGraphAnalyser.h  LifeRunnerDataTracker.cpp  LifeRunnerDataTracker.h  ProcessedStatisticSeries.cpp  ProcessedStatisticSeries.h
src/mongo/: MongoClient.cpp  MongoClient.h
src/ui/: BrainUI.cpp  BrainUI.h  Button.cpp  Button.h  Camera.cpp  Camera.h  CreatureUI.cpp  CreatureUI.h  EntityUI.cpp  EntityUI.h  FarmUI.cpp  FarmUI.h  FoodUI.cpp  FoodUI.h  MainWindow.cpp  MainWindow.h
src/ui/colors/: ColorUtils.h  RGBColor.cpp  RGBColor.h
src/ui/components/: BrainUI.cpp  BrainUI.h  Button.cpp  Camera.cpp  Camera.h  CreatureUI.cpp  CreatureUI.h  EntityUI.cpp  EntityUI.h  FarmUI.cpp  FarmUI.h  FoodUI.cpp  FoodUI.h  GBColor.cpp  GBColor.h  LifeUI.cpp  LifeUI.h
src/ui/dashboards/: ColorsGraph.cpp  ColorsGraph.h  Graph.h  (+5 more)
src/utils/: Point.cpp  Point.h  utils.cpp
src/websockets/: JSONCreator.cpp  JSONCreator.h  LifeRunnerWebsocket.cpp  LifeRunnerWebsocket.h  LifeRunnerWebsocketClient.cpp  LifeRunnerWebsocketClient.h  ManagementWebsocket.cpp  ManagementWebsocket.h  ManagementWebsocketClient.cpp  ManagementWebsocketClient.h  WebUiClient.cpp  WebUiClient.h  WebUiConnection.cpp  WebUiConnection.h
stk/src/: libstk-4.6.1.dylib  libstk.dylib
(+203 files in other folders)
